# cosmo_diffusion

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
cosmodiff/: __init__.py  augment.py  optim.py  transform.py  utils.py  version.py
cosmodiff/configs/: config.yaml
cosmodiff/data/: config.yaml  config_FM.yaml  config_multipath.yaml  params_Illustris.txt
cosmodiff/tests/: test_optim.py  test_transform.py  test_utils.py
docs/_static/: gen_cosmodiff_banner.py
scripts/: cosmodiff_sample.py  cosmodiff_train.py
